server/site/public/stylesheets/style.css
body { background-color: #eef0f3; }
h1 { font-size: 1.8em; }
.error-page h3 { line-height: 1.4em; }
#rootProgress { position: fixed; top: 0px; z-index: 1; width: 100%; }
.font-medium { font-size: 1.1em; }
.sub-header { padding-bottom: 18px; }
.content, .footer .navbar-default, .sub-header { margin: 0 auto; clear: both; }
.footer, .footer .navbar-default { background-color: #888; background-image: none; border: none; }
    .footer .navbar-default .navbar-nav > li > a { color: #eee; text-shadow: none; }
        .footer .navbar-default .navbar-nav > li > a:hover { color: #cdcdcd; }
.footer { border-top: solid 5px #222; min-height: 80px; padding: 10px 0; }
.searchbox { padding-left: 6px; background-color: #fff; color: #adadad !important; border: 10px solid #52a82b; height: 66px; line-height: 52px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
    .searchbox input { width: 90%; display: inline-block; height: 30px; padding: 4px 6px; margin-bottom: 10px; font-size: 14px; line-height: 20px; color: #555555; vertical-align: middle; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; outline: none; }
.btn.btn-flat.btn-green { background: #52a82b; color: #fff; font-size: 112.5%; width: 106%; text-decoration: none; font-family: 'Open Sans', sans-serif; font-weight: 600; border-bottom: 1px solid #777879; line-height: 52px; padding-left: 34px; padding-right: 34px; border-left: none !important; margin-left: -9px; }
.imglnk { margin-left: -15px; margin-right: -15px; width: 22px; height: 24px; background: transparent url(/images/img_searchlnk.png) no-repeat; }
.header-search:hover .btn.btn-flat.btn-green { background: #39990e; text-decoration: none; }
.header-search:hover .searchbox { border: 10px solid #39990e; }
.header-search:hover .imglnk, .imglnkhover { background: transparent url(/images/img_searchlnk.hover.png) no-repeat; }

.btn.btn-flat.btn-green { background: #52a82b; color: #fff; font-size: 112.5%; width: 106%; text-decoration: none; font-family: 'Open Sans', sans-serif; font-weight: 600; border-bottom: 1px solid #777879; line-height: 52px; padding-left: 34px; padding-right: 34px; border-left: none !important; margin-left: -9px; }
    .btn.btn-flat.btn-green:hover { background: #39990e; text-decoration: none; }
.imglnk { margin-left: -15px; margin-right: -15px; }
.btn.btn-flat.btn-skyblue { background: #0db0ff; color: #fff; font-size: 112.5%; width: 100%; text-decoration: none; font-family: 'Open Sans', sans-serif; font-weight: 600; border-bottom: 1px solid #777879; padding-left: 59px; padding-right: 59px; }
    .btn.btn-flat.btn-skyblue:hover { background: #01608e; text-decoration: none; }
.icon_ask { background: url(/images/icon_ask.png) left center no-repeat; height: 54px; width: 24px; display: inline-block; line-height: 54px; margin-right: 3px; }
.answer .entity-container { padding-bottom: 50px !important; }
.bubble { border: solid 15px #eee; border-radius: 15px; float: left; margin-top: -8px; margin-left: 5px; }
.user-profile img { box-shadow: 1px 1px 3px #ccc; width: 40px; }
.question-new-page textarea { height: 200px !important; }
.related-tags { margin-top: 6px; padding: 2px 0px 7px; }
.tagCloud-container li { list-style: none; padding: 4px 0 4px; }
    .tagCloud-container li div { display: inline-block; }
.tagCloud-container .muted { margin-top: 1px; color: #888; margin-left: -8px; }

.vote-cast { display: inline-block; font-size: 1.3em; margin-bottom: 2px; margin-top: 3px; }
    .vote-cast a, .vote-cast a:hover { text-decoration: none; }
.vote-count, .vote-up-count, .vote-down-count { color: #888; text-decoration: none; }
.vote-up-count { color: green; padding-bottom: 4px; border-bottom: solid 1px #aaa; display: block; }
.vote-down-count { color: red; display: block; }
.vote-separator { display: none; }
.vote-panel { width: 40px; text-align: center; }
    .vote-panel a:first-child { margin-bottom: 3px; }
    .vote-panel .btn-sm { padding: 5px 8px; font-size: 0.7em; }

.content { border: solid 1px #cdcdcd; margin-bottom: 48px; }
.content, .question-list { padding: 0px; }
    .content .mainSection, .content .sideSection { min-height: 480px; padding: 10px 20px 60px; }
    .content .mainSection { margin-right: -15px; background-color: #fff; border-right: solid 1px #cdcdcd; box-shadow: 1px 0px 4px #bbb; }
    .content .sideSection { margin-left: -15px; background-color: #EEF0F3; }
    .question-list .question { padding: 18px 0 12px !important; border-bottom: 1px dashed #ADADAD; }
        .question-list .question .user-img { padding-bottom: 4px; }
    .question-list .col-entity-details { padding-left: 5px; padding-right: 5px; }
    .question-list .isanswered, .question-list .isanswered .user-profile, .question-list .isanswered .vote-panel, .user-profile-page .isanswered { background-color: #EFFFEF; }

.entity-details span { font-size: 0.95em; color: #888; }
#wmd-preview h1, .entity-description h1 { font-size: 1.7em; line-height: 1.4em; }
#wmd-preview h2, .entity-description h2 { font-size: 1.6em; }
#wmd-preview h3, .entity-description h3 { font-size: 1.4em; }
#wmd-preview h4, .entity-description h4 { font-size: 1.2em; }


.tag-page .abbreviation { display: none; }
.tag-details .tag-excerpt { color: #aaa; font-size: 0.95em; font-style: italic; }
.tag-details h2 { font-size: 1.55em; }
.tag-details h4 { font-size: 1.2em; color: #666; }
.tag-details h2, .tag-details h4 { display: inline; }

.mainSection .row { padding: 2px 0 6px; }

.right-nav-tabs { margin-bottom: -7px; float: right; }
    .right-nav-tabs a { border-radius: 0px !important; padding: 8px 18px !important; text-transform: lowercase; margin-top: 4px !important; }

.contentTitle { border-bottom: solid 1px #cdcdcd; }
    .contentTitle h1 { font-size: 1.5em; font-weight: 700; display: inline-block; margin-bottom: 0px; text-transform: capitalize; margin-top: 9px; }
    .contentTitle .btn { font-size: 13px; border-radius: 2px; }
/* ... */

